test/results/custom-token-conflict.owltest.stderr
error: this custom token can't share its name with a keyword

  .token other
         ~~~~~
  input = other 'other'
                ~~~~~~~

